--- a/Exercicios/style.css
+++ b/Exercicios/style.css
@@ -43,6 +43,30 @@ footer{
 
 text-align: center;
 font-family: Arial, Helvetica, sans-serif;
+position: absolute;
+bottom: 0;
+background-color: rgba(0, 0, 0, 0);
+width: 100%;
+height: 100px;
+line-height: 100px;
+
+
+}
+
+
+
+#roda{
+
+color: white;
+font-weight: bolder;
+font-family: Arial, Helvetica, sans-serif;
+font-size: 1.1em;
+
+}
+
+a:hover{
+
+background-color: chocolate;
 
 
 }
