--- a/Exercicios/alldevices.css
+++ b/Exercicios/alldevices.css
@@ -7,10 +7,14 @@ padding: 0px;
 
 }
 
+
+
+
 body {
 
-
 background-image:  linear-gradient(to right, rgb(145, 145, 236), violet);
+background-size: cover;
+overflow-y: hidden;
 
 }
 
@@ -21,7 +25,9 @@ font-weight: bold;
 font-size: 1.3em;
 color: white;
 text-align: center;
-padding: 5px;
+padding: 30px;
+
+
 
 }
 
@@ -30,10 +36,17 @@ section{
     background: white;
     border-radius: 10px;
     padding:  15px;
-    width: 500px;
     margin: auto;
     box-shadow:  5px 5px 10px rgba(0, 0, 0, 0.589);
 
+
+
+
+}
+
+h1{
+
+text-shadow: 4px 5px 10px black;
 
 
 
@@ -49,6 +62,15 @@ background-color: rgba(0, 0, 0, 0);
 width: 100%;
 height: 100px;
 line-height: 100px;
+
+
+}
+
+div{
+
+
+text-align: center;
+padding: 7px;
 
 
 }
@@ -70,3 +92,32 @@ background-color: chocolate;
 
 
 }
+
+img{
+
+
+display: block;
+margin: auto;
+
+}
+
+@media screen and (min-width:992px) {
+
+    section{
+
+        background: white;
+        border-radius: 10px;
+        padding:  15px;
+        margin: auto;
+        box-shadow:  5px 5px 10px rgba(0, 0, 0, 0.589);
+        width: 500px;
+    
+    
+    
+    
+    }
+
+
+    
+}
+
