--- a/Exercicios/alldevices.css
+++ b/Exercicios/alldevices.css
@@ -62,6 +62,8 @@ background-color: rgba(0, 0, 0, 0);
 width: 100%;
 height: 100px;
 line-height: 100px;
+text-shadow: 4px 5px 10px black;
+text-decoration: none;
 
 
 }
