--- a/Exercicios/alldivices.css
+++ b/Exercicios/alldivices.css
@@ -27,8 +27,6 @@ color: white;
 text-align: center;
 padding: 30px;
 
-
-
 }
 
 section{
@@ -90,6 +88,7 @@ color: white;
 font-weight: bolder;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 1.1em;
+text-shadow: 4px 5px 10px black;
 
 }
 
@@ -97,6 +96,7 @@ a{
 
 color: white;
 text-decoration: none;
+
 
 }
 
