--- a/exerrcicio5/style.css
+++ b/exerrcicio5/style.css
@@ -21,7 +21,7 @@ body {
     
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    font-size: 1.3em;
+    font-size: 0.7em;
     color: white;
     text-align: center;
     padding: 30px;
@@ -132,6 +132,24 @@ body {
     
     @media screen and (min-width:992px) {
     
+
+
+        header {
+    
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            font-size: 1.1em;
+            color: white;
+            text-align: center;
+            padding: 30px;
+            
+            }
+
+
+
+
+
+
         section{
     
             background: white;
