--- a/exerrcicio5/style.css
+++ b/exerrcicio5/style.css
@@ -30,16 +30,16 @@ body {
     
     section{
     
-        background: white;
+
+        background-image: linear-gradient(to left, rgb(248, 130, 52), rgb(219, 156, 235));
         border-radius: 10px;
         padding:  15px;
         margin: auto;
         box-shadow:  5px 5px 10px rgba(0, 0, 0, 0.589);
     
     
-    
-    
     }
+
 
     select {
 
@@ -152,7 +152,8 @@ body {
 
         section{
     
-            background: white;
+
+            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.315), white);
             border-radius: 10px;
             padding:  15px;
             margin: auto;
